# DLCompiler

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  Contributors.md  README.md  aaa_compile_triton.sh  compile.sh  compile_ascend.sh  compile_on_ascend.sh  compile_on_maca.sh  compile_on_mlu.sh  compile_shared.sh  dicp_triton.cc  dicp_triton_gpgpu.cc  format.sh  requirements.txt  setup.py  setup_on_maca.py  setup_on_mlu.py  triton_dicp_triton.cc
.github/workflows/: format.yaml  main.yml  purge-artifacts.yml  release.yml
ascend/: triton_ascend.cpp
ascend/backend/: utils.py
ascend/examples/generalization_cases/: test_argmin.py  test_debug_barrier.py  test_ge_op.py  test_gt_op.py  test_le_op.py  test_logical_and_op.py  test_lshift_op.py  test_lt_op.py  test_matmul.py  test_max.py  test_min.py  test_reduce.py  test_rshift_op.py
ascend/examples/pytest_ut/: test_add.py  test_cast_full.py  test_device_print.py  test_flip.py  test_fusedattention.py  test_max_dim0.py  test_max_dim1.py  test_min_dim0.py  test_min_dim1.py  test_permute_full.py
ascend/examples/tutorials/: 03-layer-norm.py  04-fused-attention.py  05-matrix-multiplication.py
backend/: ascend.py  compiler.py  cpu_backend.py  driver.py  maca.c  maca.py  mlu.c  mlu.py  npu.py  npu_utils.cpp  utils.py
backend/commonir/: adapter.py  backend.py  compiler.py
benchmarks/: bench_matmul.py
cmake/: CMakeLists.txt.1  CMakeLists.txt.2  commonir.cmake  utils.cmake
compiler/lib/TransformOps/: CMakeLists.txt  DialectExtension.cpp  DicpTransformOps.cpp  TransformsUtils.cpp
compiler/lib/Utils/: CMakeLists.txt  Utils.cpp
cutlass/: README.md
cutlass/examples/24_gemm_grouped/: gemm_grouped.cu
docker/: Dockerfile
language/deeplink/: __init__.py  async_task.py  core.py  custom_op.py  libdevice.py  mem_ops.py  mma_ops.py  semantic.py  types.py  utility.py
language/deeplink/compiler/: code_generator.py  dispatch.py
patch/: ascendnpu-ir.patch  triton_changes.patch  triton_lambda.patch  triton_python_setup_py.patch  triton_python_src_ir_cc.patch  triton_python_triton_compiler_code_generator_py.patch  triton_python_triton_lanuage_semantic_py.patch  triton_python_triton_runtime_jit_py.patch  triton_shared_changes.patch  triton_unittest_googletest_cmake.patch
patch/triton/: include_triton_Dialect_Triton_IR_TritonOps_td.patch  inlcude_triton_Dialect_TritonNvidiaGPU_IR_TritonNvidiaGPUOps.patch  lib_Dialect_TritonGPU_IR_Ops.patch  lib_Dialect_Triton_IR_Traits_cpp.patch  python_setup_py.patch  python_src_gluon_ir_cc.patch  python_src_ir_cc.patch  python_src_ir_h.patch  python_triton_backends_compiler_py.patch  python_triton_compiler_code_generator_py.patch  python_triton_compiler_compiler_py.patch  python_triton_language___init___py.patch  python_triton_language_semantic_py.patch  python_triton_utils_py.patch  setup_py.patch  triton.patch  unittest_googletest_cmake.patch
patch/ttshared/: triton_shared.patch  ttshared_changes.patch
patch/update/: triton.patch  triton_shared.patch
patch/v3_4/: triton.patch  triton_shared.patch
python/dlBLAS/: README.md
python/dlBLAS/benchmarks/: apply_rotary_pos_emb.py  flash_attention_v2.py  fused_rotary_and_fa.py  matmul.py  partial_rotary_emb.py  selective_scan.py  topk_gating.py
python/dlBLAS/dlblas/: __init__.py  bencher.py  cache.py  compiler.py  dynamic_compiler.py  frontend.py  ir.py  op_registry.py  op_struct.py  parser.py  symbolic_var.py
python/dlBLAS/tests/: test_cache.py  test_kernels.py  test_ops.py  test_registry.py  test_sympy.py
python/mlu_op/: fa.py  fused_feedforward.py  mm.py  rmsnorm.py  softmax.py  vec_add.py
python/op/: core.py  fa_seqk77_dim96.py  layernorm.py  softmax.py
python/op/moe/: benchmark.py  gating_bwd.py  gating_fwd.py  stable_argsort.py  test.py  topk_gating.py  topk_gating_fwd.py
scripts/: ci_python_black.sh  install_tilelang-dlc.sh
test/ascend/: matrix-multiplication-optimized.py  run_pytest_ut.sh  run_tests.sh  silu_and_mul.py  silu_and_mul_test.py  test_custom_op.py  test_extract_slice.py  test_insert_slice.py  test_matmul.py  test_matrix_multiplication_optimized.py  test_mlir.sh  test_tensor_get_item.py
test/ascend/attention/: test_lightning_attn.py
test/ascend/cpu_verify/: test_bare_matmul.py  test_fa.py  test_vec_add.py
test/ascend/failed_tests/: test_common.py  test_conv.py  test_cumprod.py  test_flip.py  test_gather.py  test_if_tensor.py  test_index_select.py  test_interleave.py  test_isfinited.py  test_join.py  test_ldst.py  test_load_store.py  test_log.py  test_makeblockptr_permute.py  test_matmul.py  test_max_vector.py  test_min_dim0.py  test_min_vector.py  test_multi_return.py  test_nearest.py  test_not.py  test_pointer_type.py  test_ptr_add.py  test_rand.py  test_range.py  test_resize_performance.py  test_rint.py  test_rotatry_gpt.py  test_scalar_calc.py  test_silu.py  test_softmax.py  test_sort.py  test_sqrt.py  test_static_print_and_assert.py  test_strides.py  test_swap.py  test_tensor_descriptor.py  test_top2gating_argmax.py  test_unlign_max_with_index.py
test/ascend/mlir/: annotate_transpose_pass.mlir  apply_tiling_plan.mlir  canonicalize_tileable_ops.mlir  dicp_de_linalgize.mlir  dicp_fuse_loop.mlir  dicp_shrink_buffers.mlir  duplicate_stage_producers.mlir  linalg_broadcast.mlir  linalg_multi_assign.mlir  lower_forall_to_for.mlir  pipeline_loop_unroll.mlir  prepare_input_bundle_scheduling.mlir  schedule_input_bundles.mlir  stage_tiling_plan.mlir  unroll_stage_loops.mlir  vectorize_parallel_loop.mlir  vectorize_parallel_loop_mul_add.mlir
test/ascend/passed_tests/: test_2d_permute.py  test_3Dgrid.py  test_abs.py  test_abs_2.py  test_add.py  test_add_multi_return.py  test_advance.py  test_arange.py  test_associative_scan.py  test_associative_scan_multi_input.py  test_atan.py  (+105 more)
test/commonir/: add_vector.py  gemm.py  run_tests.sh
test/dsl/: hopper-fa-ws-pipelined-pingpong_test.py  hopper-gemm-ws_test.py  test_alloc.py  test_code.py  test_compile_hint.py  test_error.py  test_lambda.py  vector-add2.py
test/maca/: vector_add.py
tools/dicp_triton_opt/: CMakeLists.txt  dicp_triton_opt.cpp
(+229 files in other folders)
